--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,15 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff0f0f0"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="pl.osmalek.bartek.jamplayer.UI.MainActivity">
+    tools:context="pl.osmalek.bartek.jamplayer.ui.MainActivity">
 
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/file_list_fragment_container">
-
-    </FrameLayout>
+        android:id="@+id/file_list_fragment_container" />
 </RelativeLayout>
