--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pl.osmalek.bartek.jamplayer.UI.MainActivity" >
+    <item android:title="@string/playing_now"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_queue_music_white_24dp"
+        android:id="@+id/queueDrawer" />
+    <!--<item android:title="Set main folder"-->
+        <!--android:id="@+id/setDefault"-->
+        <!--app:showAsAction="never" />-->
+    <!--<item android:id="@+id/restoreDefault"-->
+        <!--android:title="Reset main folder"-->
+        <!--app:showAsAction="never" />-->
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
