--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="bottom_sheet_margin">-20dp</dimen>
+    <dimen name="bottom_sheet_peek">76dp</dimen>
+    <dimen name="statusbar_margin">0dp</dimen>
 </resources>
