--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,11 @@
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -19,5 +24,5 @@
     <style name="AlertDialog.Light" parent="Base.Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:background">@android:color/background_light</item>
     </style>
-
+    <style name="AppTheme.PopupMenu" parent="Base.Widget.AppCompat.PopupMenu.Overflow"/>
 </resources>
