--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -32,18 +33,15 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/bottom_sheet"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
             app:behavior_hideable="false"
-            android:layout_marginBottom="@dimen/bottom_sheet_margin"
             app:behavior_peekHeight="@dimen/bottom_sheet_peek"
             app:cardBackgroundColor="@color/cardview_light_background"
             android:onClick="onBottomSheetClick"
-            app:cardElevation="10dp"
-            app:cardMaxElevation="12dp"
+            app:cardElevation="8dp"
+            app:cardUseCompatPadding="true"
             app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-            style="@style/Theme.Design.BottomSheetDialog">
+            style="@style/Theme.Design.BottomSheetDialog.PlayingNow"
+            app:cardPreventCornerOverlap="false">
 
             <include layout="@layout/collapsed_sheet" />
     </android.support.v7.widget.CardView>
@@ -53,14 +51,13 @@
             style="@style/Widget.Design.FloatingActionButton"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            app:elevation="12dp"
+            app:elevation="10dp"
             app:fabSize="normal"
-            app:pressedTranslationZ="2dp"
             app:srcCompat="@drawable/ic_play_arrow_white_24dp"
             android:layout_marginBottom="28dp"
-            android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/fab_margin"
             android:layout_gravity="bottom|end" />
 
     </android.support.design.widget.CoordinatorLayout>
