--- a/app/src/main/res/layout/collapsed_sheet.xml
+++ b/app/src/main/res/layout/collapsed_sheet.xml
@@ -7,12 +7,28 @@
     android:id="@+id/bs_content">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_sheet_peek">
+        android:layout_height="@dimen/titlebar_height"
+        android:animateLayoutChanges="true">
+
+        <ImageButton
+            app:srcCompat="@drawable/close"
+            android:id="@+id/closeSheetButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:onClick="closeBottomSheet"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:visibility="gone"
+            android:layout_margin="12dp"
+            android:contentDescription="@string/close"/>
+
         <TextView
             android:id="@+id/title_playing_now"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Play music"
+            android:text="@string/no_music_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/primaryText"
             android:maxLines="1"
@@ -21,11 +37,28 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:singleLine="true"
+            app:layout_constraintRight_toLeftOf="@+id/playingQueueButton"
+            android:layout_marginEnd="@dimen/titleEndMargin"
+            android:layout_marginStart="@dimen/titleStartMargin"
+            app:layout_constraintLeft_toRightOf="@+id/closeSheetButton" />
+
+        <ImageButton
+            app:srcCompat="@drawable/ic_queue_music_white_24dp"
+            android:id="@+id/playingQueueButton"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            style="@style/Widget.AppCompat.ImageButton"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:tint="@color/primaryText"
+            android:visibility="invisible"
+            android:onClick="openPlayingQueue"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_margin="12dp"
+            android:contentDescription="@string/playing_now"/>
     </android.support.constraint.ConstraintLayout>
     <ImageView
         android:layout_width="match_parent"
@@ -42,12 +75,14 @@
         android:max="10"
         android:progress="0"
         android:id="@+id/seekBar"
-        android:clickable="false"
-        android:paddingTop="8dp" />
+        android:paddingTop="8dp"
+        android:duplicateParentState="false"
+        android:paddingBottom="8dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="112dp" >
+        android:layout_height="112dp"
+        android:layoutDirection="ltr">
 
         <ImageButton
             android:layout_width="wrap_content"
