--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,11 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="bottom_sheet_margin">-20dp</dimen>
-    <dimen name="bottom_sheet_peek">76dp</dimen>
+    <dimen name="bottom_sheet_peek">68dp</dimen>
     <dimen name="statusbar_margin">0dp</dimen>
+    <dimen name="fab_padding">0dp</dimen>
+    <dimen name="titlebar_height">56dp</dimen>
+    <dimen name="titleEndMargin">32dp</dimen>
+    <dimen name="titleStartMargin">16dp</dimen>
+    <dimen name="titleExpandedMargin">12dp</dimen>
 </resources>
