--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,11 @@
         <item name="android:background">@android:color/background_light</item>
     </style>
     <style name="AppTheme.PopupMenu" parent="Base.Widget.AppCompat.PopupMenu.Overflow"/>
+
+    <style name="Theme.Design.BottomSheetDialog.PlayingNow">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:clickable">true</item>
+        <item name="android:layout_marginBottom">@dimen/bottom_sheet_margin</item>
+    </style>
 </resources>
