Reimplemented setting/restoring default folder & cover in metadata + MediaBrowser fixes

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,12 +6,14 @@
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_queue_music_white_24dp"
         android:id="@+id/queueDrawer" />
-    <!--<item android:title="Set main folder"-->
-        <!--android:id="@+id/setDefault"-->
-        <!--app:showAsAction="never" />-->
-    <!--<item android:id="@+id/restoreDefault"-->
-        <!--android:title="Reset main folder"-->
-        <!--app:showAsAction="never" />-->
+    <item android:title="Set main folder"
+        android:id="@+id/setDefault"
+        android:visible="false"
+        app:showAsAction="never" />
+    <item android:id="@+id/restoreDefault"
+        android:title="Reset main folder"
+        android:visible="false"
+        app:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
