--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                android:transitionName="toolbar"/>
 
         </android.support.design.widget.AppBarLayout>
 
@@ -44,7 +45,7 @@
             app:cardPreventCornerOverlap="false">
 
             <include layout="@layout/collapsed_sheet" />
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -54,7 +55,7 @@
             app:elevation="10dp"
             app:fabSize="normal"
             app:srcCompat="@drawable/ic_play_arrow_white_24dp"
-            android:layout_marginBottom="28dp"
+            android:layout_marginBottom="@dimen/fab_bottom_margin"
             android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
             android:layout_marginEnd="@dimen/fab_margin"
