--- a/app/src/main/res/layout/collapsed_sheet.xml
+++ b/app/src/main/res/layout/collapsed_sheet.xml
@@ -1,113 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/title_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/bs_content">
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/titlebar_height"
-        android:animateLayoutChanges="true">
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:animateLayoutChanges="true"
+    android:minHeight="56dp">
 
-        <ImageButton
-            app:srcCompat="@drawable/close"
-            android:id="@+id/closeSheetButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:onClick="closeBottomSheet"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:visibility="gone"
-            android:layout_margin="12dp"
-            android:contentDescription="@string/close"/>
+    <ImageButton
+        android:id="@+id/closeSheetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/close"
+        android:onClick="closeBottomSheet"
+        android:visibility="gone"
+        app:srcCompat="@drawable/close"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:padding="12dp" />
 
-        <TextView
-            android:id="@+id/title_playing_now"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/no_music_text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/primaryText"
-            android:maxLines="1"
-            android:ellipsize="marquee"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:singleLine="true"
-            app:layout_constraintRight_toLeftOf="@+id/playingQueueButton"
-            android:layout_marginEnd="@dimen/titleEndMargin"
-            android:layout_marginStart="@dimen/titleStartMargin"
-            app:layout_constraintLeft_toRightOf="@+id/closeSheetButton" />
+    <TextView
+        android:id="@+id/title_playing_now"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="@string/no_music_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/primaryText"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/closeSheetButton"
+        app:layout_constraintRight_toLeftOf="@+id/playingQueueButton"
+        android:layout_marginEnd="@dimen/titleEndMargin"
+        android:layout_marginStart="@dimen/titleStartMargin"
+        android:layout_width="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/subtitle_playing_now" />
 
-        <ImageButton
-            app:srcCompat="@drawable/ic_queue_music_white_24dp"
-            android:id="@+id/playingQueueButton"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/Widget.AppCompat.ImageButton"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:tint="@color/primaryText"
-            android:visibility="invisible"
-            android:onClick="openPlayingQueue"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_margin="12dp"
-            android:contentDescription="@string/playing_now"/>
-    </android.support.constraint.ConstraintLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/cover"
-        android:layout_weight="1"
-        android:background="#f0f0f0"
-        android:contentDescription="@string/cover_desc" />
+    <TextView
+        android:id="@+id/subtitle_playing_now"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:visibility="gone"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="@+id/title_playing_now"
+        app:layout_constraintTop_toBottomOf="@+id/title_playing_now"
+        app:layout_constraintRight_toRightOf="@+id/title_playing_now"
+        app:layout_constraintBottom_toTopOf="@+id/cover" />
+
+    <ImageButton
+        android:id="@+id/playingQueueButton"
+        style="@style/Widget.AppCompat.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/playing_now"
+        android:onClick="openPlayingQueue"
+        android:tint="@color/primaryText"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_queue_music_white_24dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:padding="12dp" />
+
 
     <SeekBar
-        style="@style/Widget.AppCompat.SeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="10"
-        android:progress="0"
         android:id="@+id/seekBar"
-        android:paddingTop="8dp"
+        style="@style/Widget.AppCompat.SeekBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/control_bar"
         android:duplicateParentState="false"
-        android:paddingBottom="8dp" />
+        android:max="10"
+        android:paddingTop="8dp"
+        android:progress="0"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingBottom="4dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/repeatButton" />
+
+    <ImageView
+        android:id="@+id/cover"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_above="@+id/seekBar"
+        android:layout_below="@+id/title_bar"
+        android:background="#f0f0f0"
+        android:contentDescription="@string/cover_desc"
+        app:srcCompat="@drawable/ic_album_primary_48dp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_info_outline_primary_24dp"
+        android:id="@+id/infoButton"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="12dp"
+        app:layout_constraintRight_toLeftOf="@+id/duration"
+        app:layout_constraintLeft_toRightOf="@+id/repeatButton"
+        app:layout_constraintTop_toTopOf="@+id/repeatButton"
+        app:layout_constraintBottom_toBottomOf="@+id/repeatButton"
+        android:onClick="showTrackInfo" />
+
+    <pl.osmalek.bartek.jamplayer.ui.RepeatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="12dp"
+        android:id="@+id/repeatButton"
+        app:layout_constraintLeft_toRightOf="@+id/position"
+        app:layout_constraintRight_toLeftOf="@+id/infoButton"
+        app:layout_constraintTop_toTopOf="@+id/position"
+        app:layout_constraintBottom_toBottomOf="@+id/position"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/control_bar"
+        android:layout_width="0dp"
         android:layout_height="112dp"
-        android:layoutDirection="ltr">
+        android:layoutDirection="ltr"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="4dp">
 
         <ImageButton
+            android:id="@+id/prev"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/prev"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            app:srcCompat="@drawable/ic_skip_previous_black_48dp"
-            android:layout_weight="1"
-            android:onClick="prevSong"
             android:layout_margin="28dp"
-            android:contentDescription="@string/prev" />
-
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/prev"
+            android:onClick="prevSong"
+            app:srcCompat="@drawable/ic_skip_previous_black_48dp" />
         <Space
             android:layout_width="112dp"
             android:layout_height="match_parent" />
-
         <ImageButton
+            android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_skip_next_black_48dp"
-            android:id="@+id/next"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_weight="1"
-            android:onClick="nextSong"
             android:layout_margin="28dp"
-            android:contentDescription="@string/next" />
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/next"
+            android:onClick="nextSong"
+            app:srcCompat="@drawable/ic_skip_next_black_48dp" />
     </LinearLayout>
-</LinearLayout>
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="56dp"
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintGuide_begin="56dp" />
+
+    <TextView
+        android:text="0:00  "
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/position"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/control_bar" />
+
+    <TextView
+        android:text=" 0:00 "
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/duration"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/position"
+        app:layout_constraintTop_toTopOf="@+id/position" />
+
+
+</android.support.constraint.ConstraintLayout>
