--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,15 +34,14 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/bottom_sheet"
+            style="@style/Theme.Design.BottomSheetDialog.PlayingNow"
+            android:onClick="onBottomSheetClick"
             app:behavior_hideable="false"
             app:behavior_peekHeight="@dimen/bottom_sheet_peek"
             app:cardBackgroundColor="@color/cardview_light_background"
-            android:onClick="onBottomSheetClick"
             app:cardElevation="8dp"
-            app:cardUseCompatPadding="true"
-            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-            style="@style/Theme.Design.BottomSheetDialog.PlayingNow"
-            app:cardPreventCornerOverlap="false">
+            app:cardPreventCornerOverlap="false"
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
             <include layout="@layout/collapsed_sheet" />
         </android.support.v7.widget.CardView>
