--- a/app/src/main/res/layout/expanded_sheet.xml
+++ b/app/src/main/res/layout/expanded_sheet.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/title_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +18,7 @@
         android:contentDescription="@string/close"
         android:onClick="closeBottomSheet"
         android:padding="12dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,8 +28,8 @@
         android:id="@+id/title_playing_now"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/titleEndMargin"
-        android:layout_marginStart="@dimen/titleStartMargin"
+        android:layout_marginEnd="@dimen/titleExpandedMargin"
+        android:layout_marginStart="@dimen/titleExpandedMargin"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
@@ -41,7 +40,8 @@
         app:layout_constraintLeft_toRightOf="@+id/closeSheetButton"
         app:layout_constraintRight_toLeftOf="@+id/playingQueueButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="0.333" />
 
     <TextView
         android:id="@+id/subtitle_playing_now"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:singleLine="true"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/cover"
         app:layout_constraintLeft_toLeftOf="@+id/title_playing_now"
         app:layout_constraintRight_toRightOf="@+id/title_playing_now"
@@ -66,7 +66,7 @@
         android:onClick="openPlayingQueue"
         android:padding="12dp"
         android:tint="@color/primaryText"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -86,7 +86,7 @@
         android:paddingBottom="4dp"
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
-        android:paddingTop="4dp"
+        android:paddingTop="8dp"
         android:progress="0"
         app:layout_constraintBottom_toTopOf="@+id/repeatButton"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -181,8 +181,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="56dp"
         app:layout_constraintGuide_begin="56dp" />
 
     <TextView
