--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,5 +31,8 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:clickable">true</item>
         <item name="android:layout_marginBottom">@dimen/bottom_sheet_margin</item>
+        <item name="android:layout_marginTop">@dimen/bottom_sheet_margin</item>
+        <item name="android:layout_marginLeft">@dimen/bottom_sheet_margin</item>
+        <item name="android:layout_marginRight">@dimen/bottom_sheet_margin</item>
     </style>
 </resources>
