--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
+        android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -23,8 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                android:transitionName="toolbar"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         </android.support.design.widget.AppBarLayout>
 
@@ -34,15 +32,14 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/bottom_sheet"
+            style="@style/Theme.Design.BottomSheetDialog.PlayingNow"
+            android:onClick="onBottomSheetClick"
             app:behavior_hideable="false"
             app:behavior_peekHeight="@dimen/bottom_sheet_peek"
             app:cardBackgroundColor="@color/cardview_light_background"
-            android:onClick="onBottomSheetClick"
             app:cardElevation="8dp"
-            app:cardUseCompatPadding="true"
-            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-            style="@style/Theme.Design.BottomSheetDialog.PlayingNow"
-            app:cardPreventCornerOverlap="false">
+            app:cardPreventCornerOverlap="false"
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
             <include layout="@layout/collapsed_sheet" />
         </android.support.v7.widget.CardView>
